--- a/interface/stp.html
+++ b/interface/stp.html
@@ -50,6 +50,19 @@
         #myTabContent .table-hover>tbody>tr:hover {
             background-color: #33ccff;
         }
+
+        .arrow-right {
+            width: 20px;
+            height: 20px;
+            background-color: transparent;
+            /* 模块背景为透明 */
+            border-color: #f02c57;
+            border-style: solid;
+            border-width: 6px 6px 0 0;
+            margin: auto;
+            transform: rotate(45deg);
+            /*箭头方向可以自由切换角度*/
+        }
     </style>
 </head>
 
@@ -82,24 +95,27 @@
             <table id="tablePVST" class="table table-striped table-bordered table-hover">
                 <thead style="font-weight: bolder;">
                     <tr>
-                        <td width="45%">VLAN名称</td>
-                        <td width="45%">VLAN 状态</td>
+                        <td width="5%"></td>
+                        <td width="40%">VLAN名称</td>
+                        <td width="40%">VLAN 状态</td>
                         <td>操作</td>
                     </tr>
                 </thead>
                 <tbody id="bodyPvst">
                     <tr>
+                        <td name="txtCursor"></td>
                         <td><span name="txtValnId" value="1">vlan1</span></td>
                         <td> up</td>
                         <td>
-                            <button type="button" name="btnPvstEdit" class="btn btn-primary">使能
+                            <button type="button" name="btnPvstEnalbe" class="btn btn-primary">使能
                             </button>
-                            <button type="button" class="btn btn-primary">不使能
+                            <button type="button" name="btnPvstDisable" class="btn btn-primary">不使能
                             </button>
                         </td>
                     </tr>
                     <tr>
-                        <td>vlan2</td>
+                        <td name="txtCursor"></span></td>
+                        <td><span name="txtValnId" value="2">vlan2</span></td>
                         <td> up</td>
                         <td>
                             <button type="button" name="btnPvstEdit" class="btn btn-primary">使能
@@ -378,9 +394,11 @@
                 html = ('');
                 for (var i = 0; i < pCount; i++) {
                     html += ('<tr>');
-                    html += ('<td><span name="txtValnId" value="' + pvstSet[i][0].trim().substring(4) + '">' + pvstSet[i][0] + '</span></td>');
+                    html += ('<td name="txtCursor"></td>');
+                    html += ('<td><span name="txtValnId" value="' + pvstSet[i][0].substring(4) + '">' + pvstSet[i][0] + '</span></td>');
                     html += ('<td>' + statusTextArray[pvstSet[i][1]] + '</td>');
-                    html += ('<td><button type="button" name="btnPvstEdit" class="btn btn-primary">使能</button> <button type="button" class="btn btn-primary">不使能</button></td>');
+                    html += ('<td><button type="button" textvalue="'+pvstSet[i][0]+'" value="1" name="btnPvstEnalbe" class="btn btn-primary">使能</button> ');
+                    html += ('<button type="button" textvalue="'+pvstSet[i][0]+'" value="0" name="btnPvstDisable" class="btn btn-primary">不使能</button></td>');
                     html += ('</tr>');
                 }
                 $("#tablePVST tbody").html(html);
@@ -453,23 +471,23 @@
                     html += ('<hr size=1 style=" height:2px;border:none;background-color: green;">');
                     html += ('<div class="row">');
                     html += ('<div class="col-md-offset-4 col-md-2" style="font-weight: bolder;">Bridge ID Mac Address</div>');
-                    html += ('<div class="col-md-2">'+selectedTree[i][7]+'</div>');
+                    html += ('<div class="col-md-2">' + selectedTree[i][7] + '</div>');
                     html += ('</div>');
                     html += ('<div class="row">');
                     html += ('<div class="col-md-offset-4 col-md-2" style="font-weight: bolder;">Bridge ID Priority:</div>');
-                    html += ('<div class="col-md-2">'+selectedTree[i][8]+'</div>');
+                    html += ('<div class="col-md-2">' + selectedTree[i][8] + '</div>');
                     html += ('</div>');
                     html += ('<div class="row">');
                     html += ('<div class="col-md-offset-4 col-md-2" style="font-weight: bolder;">Bridge ForceVersion:</div>');
-                    html += ('<div class="col-md-2">'+selectedTree[i][9]+'</div>');
+                    html += ('<div class="col-md-2">' + selectedTree[i][9] + '</div>');
                     html += ('</div>');
                     html += ('<div class="row">');
                     html += ('<div class="col-md-offset-2 col-md-1" style="font-weight: bolder;">Bridge Max Age:</div>');
-                    html += ('<div class="col-md-1">'+selectedTree[i][10]+'</div>');
+                    html += ('<div class="col-md-1">' + selectedTree[i][10] + '</div>');
                     html += ('<div class=" col-md-2" style="font-weight: bolder;">Hello Time:</div>');
-                    html += ('<div class="col-md-2">'+selectedTree[i][11]+'</div>');
+                    html += ('<div class="col-md-2">' + selectedTree[i][11] + '</div>');
                     html += ('<div class=" col-md-1" style="font-weight: bolder;">Forward Delay:</div>');
-                    html += ('<div class="col-md-1">'+selectedTree[i][12]+'</div>');
+                    html += ('<div class="col-md-1">' + selectedTree[i][12] + '</div>');
                     html += ('</div>');
                 }
                 $("#divStpTree").html(html);
@@ -487,12 +505,19 @@
         });
         $("#tablePVST tbody").on('click', "tr td:not(:last-child)", function () {
             $("#vlanDetail").attr("style", "margin-top:20px;");
-            var tmpId = parseInt($(this).find("[name='txtValnId']").attr("value"));
+            var tmpId = parseInt($(this).parent().find("[name='txtValnId']").attr("value"));
+            var spanList = document.getElementsByName("txtCursor");
+            $.each(spanList, function () {
+                $(this).html("");
+            });
+            $(this).parent().find("[name='txtCursor']").html('<div class="arrow-right"></div>');
             loadTreeDetailPage(tmpId);
             loadEthPage(tmpId);
         });
-        $("#tablePVST").on('click', '[name="btnPvstEdit"]', function () {
-            alert(456);
+        $("#tablePVST").on('click', '[name="btnPvstEnalbe"]', function () {
+            alert($(this).attr("textvalue")+" " + $(this).attr("value"));
+        }).on('click','[name="btnPvstDisable"]',function(){
+            alert($(this).attr("textvalue")+" " + $(this).attr("value"));
         });
         //鼠标移动监听，这里不用mouseout mousein 会频繁触发导致值不准
         $("#myTabContent").mouseenter(function () {
@@ -509,6 +534,10 @@
         document.onclick = function (event) {
             if (!inDiv) {
                 $("#vlanDetail").attr("style", "display:none;");
+                var spanList = document.getElementsByName("txtCursor");
+                $.each(spanList, function () {
+                    $(this).html("");
+                });
             }
         };
 
