--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <frameset cols="*" rows="100,*,22" border="0" frameborder="no" framespacing="0">
 <frame src="top.html" name="topframe" id="topframe" scrolling="no" noresize="noresize">
 <frameset cols="190,*" rows="*" border="0" frameborder="no" framespacing="0" >
-	<frame src="menu.html" name="menuframe" id="menuframe" scrolling="no" noresize="noresize">
+	<frame src="newmenu.html" name="menuframe" id="menuframe" scrolling="no" noresize="noresize">
 	<frame src="main.html" name="mainframe" id="mainframe" scrolling="yes" noresize="noresize">
 </frameset>
 <frame src="bottom.html" name="bottomframe" id="bottomframe" scrolling="no" noresize="noresize">
