导航栏图标

--- a/sysSetting/upgrade.html
+++ b/sysSetting/upgrade.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>IGMP</title>
+    <title>upgrade</title>
     <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
@@ -39,7 +39,7 @@
         </table>
         <table style="display:none" id="loading_table" width="200" cellpadding="0" cellspacing="0" >
               <tr>
-                <td width="32" height="32" ><img src="../img/loading.gif" width="32" height="32" id="img_loading" /></td>
+                <td width="32" height="32" ></td>
                 <td><span class="STYLE2">升级中</span>......</td>
               </tr>
             </table>
