--- a/bottom.html
+++ b/bottom.html
@@ -32,7 +32,7 @@ BODY {
 <BODY >
 <table width="100%" border="0">
   <tr>
-    <td class="bottomtext">Copyright &copy 2010-2011 浙江创亿科技有限公司 All rights reserved</td>
+    <td class="bottomtext">Copyright &copy 2021-2022 武汉中飞芯电 All rights reserved</td>
   </tr>
 </table>
 </BODY>
