--- a/newmenu.html
+++ b/newmenu.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>IGMP</title>
     <link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="./font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <script src="./js/jquery.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
 </head>
@@ -16,29 +17,35 @@
             <div class="col-md-2" style="background: #ddd;min-height: 800px;">
                 <ul id="mainNav" class="nav nav-tabs nav-stacked">
                     <li>
-                        <a href="#interfaceSetting" class="nav-header collapsed" data-toggle="collapse">接口管理
-                            <span class="pull-right"><b>>></b></span>
+                        <a href="#interfaceSetting" class="nav-header collapsed" data-toggle="collapse">
+                            接口管理
+                            <i class="fa fa-leaf" style="font-size: 20px;color: green;"></i>
                         </a>
                         <ul id="interfaceSetting" class="nav nav-list collapse secondmenu">
                             <li>
-                                <a href="./interface/eth.html" target="mainframe"><b>--></b>ETH</a>
+                                <a href="./interface/eth.asp" target="mainframe">ETH                             
+                                </a>
                             </li>
                             <li>
-                                <a href="./interface/trunk.html" target="mainframe"><b>--></b>TRUNK</a>
+                                <a href="./interface/trunk.asp" target="mainframe">TRUNK      
+                                </a>
                             </li>
                             <li>
-                                <a href="./interface/vlan.html" target="mainframe"><b>--></b>VLAN</a>
+                                <a href="./interface/vlan.asp" target="mainframe">VLAN   
+                                </a>
                             </li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#L2Setting" class="nav-header collapsed" data-toggle="collapse">L2协议</a>
+                        <a href="#L2Setting" class="nav-header collapsed" data-toggle="collapse">L2协议
+                            <i class="fa fa-leaf" style="font-size: 20px;color: green;"></i>
+                        </a>
                         <ul id="L2Setting" class="nav nav-list collapse secondmenu">
                             <li>
-                                <a href="./interface/stp.html" target="mainframe">STP</a>
+                                <a href="./interface/stp.asp" target="mainframe">STP</a>
                             </li>
                             <li>
-                                <a href="./interface/igmp.html" target="mainframe">IGMP-SWAPING</a>
+                                <a href="./interface/igmp.asp" target="mainframe">IGMP-SWAPING</a>
                             </li>
                             <li>
                                 <a>EAPS</a>
@@ -46,7 +53,9 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#L3Setting" class="nav-header collapsed" data-toggle="collapse">L3协议</a>
+                        <a href="#L3Setting" class="nav-header collapsed" data-toggle="collapse">L3协议
+                            <i class="fa fa-leaf" style="font-size: 20px;color: green;"></i>
+                        </a>
                         <ul id="L3Setting" class="nav nav-list collapse secondmenu">
                             <li>
                                 <a>111</a>
@@ -60,25 +69,27 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#SysMain" class="nav-header collapsed" data-toggle="collapse">软件维护</a>
+                        <a href="#SysMain" class="nav-header collapsed" data-toggle="collapse">软件维护
+                            <i class="fa fa-leaf" style="font-size: 20px;color: green;"></i>
+                        </a>
                         <ul id="SysMain" class="nav nav-list collapse secondmenu">
                             <li>
-                                <a>配置信息</a>
+                                <a href="./sysSetting/cofiginfo.html" target="mainframe">配置信息</a>
                             </li>
                             <li>
-                                <a>软件升级</a>
+                                <a href="./sysSetting//upgrade.html" target="mainframe">软件升级</a>
                             </li>
                             <li>
                                 <a>pib/fw升级</a>
                             </li>
                             <li>
-                                <a>软件日志</a>
+                                <a href="./sysSetting/log.html" target="mainframe">软件日志</a>
                             </li>
                             <li>
-                                <a>保存配置</a>
+                                <a href="./sysSetting/saveConfig.html" target="mainframe">保存配置</a>
                             </li>
                             <li>
-                                <a>重启</a>
+                                <a href="./sysSetting/reboot.html" target="mainframe">重启</a>
                             </li>
                         </ul>
                     </li>
