诡异的报错

--- a/sysSetting/cofiginfo.html
+++ b/sysSetting/cofiginfo.html
@@ -48,7 +48,7 @@
             </tr>
         </table>
         </form>
-        <form name="web_sys_restore_def" action=/goform/web_sys_restore_def method="post">
+        <form name="web_sys_restore_def">
           <table width="600" height="90" border="0" cellpadding="0" cellspacing="0">
             <tr>
               <td height="20" colspan="2" class="tableTitle">恢复出厂配置</td>
